--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,10 +1,17 @@
 {
+  "tagname-lowercase": true,
   "attr-lowercase": true,
+  "alt-require": true,
+  "id-unique": true,
+  "style-disabled": false,
+  "inline-style-disabled": false,
+  "inline-script-disabled": false,
+  "space-tab-mixed-disabled": "space",
+  "id-class-value": "dash",
   "attr-value-double-quotes": true,
-  "doctype-first": true,
+  "doctype-first": false,
   "tag-pair": true,
   "spec-char-escape": true,
-  "id-unique": true,
   "src-not-empty": true,
-  "alt-require": true
+  "title-require": true
 }
