--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,18 +2,26 @@ env:
   browser: true
   es2021: true
 
-extends: airbnb-base
+extends:
+  - airbnb-base
 
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 
 rules:
-  no-console: off
-  import/extensions: off
-  no-trailing-spaces: error
-  arrow-body-style: off
-  consistent-return: off
+  # ПРАВИЛА CI (обязательные)
+  semi: ['error', 'never']
+  brace-style: ['error', 'stroustrup']
+  indent: ['error', 2]
+  arrow-parens: ['error', 'as-needed']
+  
+  # Твои кастомные правила
+  no-console: 'off'
+  import/extensions: 'off'
+  no-trailing-spaces: 'error'
+  arrow-body-style: 'off'
+  consistent-return: 'off'
   no-param-reassign: ['error', { props: false }]
   import/no-unresolved: 'off'
 
