--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,11 +10,11 @@ parserOptions:
   sourceType: module
 
 rules:
-  # === ПРАВИЛА CI (обязательные, поверх airbnb) ===
-  semi: ['error', 'never']                     # Без точек с запятой
-  brace-style: ['error', 'stroustrup']         # Скобки с новой строки
-  indent: ['error', 2]                         # Отступ 2 пробела
-  arrow-parens: ['error', 'as-needed']         # Скобки у параметров стрелочных функций
+  # === ПРАВИЛА CI (исправленные) ===
+  semi: ['error', 'never']                     # Без точек с запятой ✓
+  brace-style: ['error', 'stroustrup']         # Скобки с новой строки ✓
+  indent: ['error', 2]                         # Отступ 2 пробела ✓
+  arrow-parens: ['error', 'always']            # ВСЕГДА скобки у параметров (исправлено!)
 
   # === кастомные правила ===
   no-console: 'off'
