--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
+    "@stylistic/eslint-plugin": "^1.8.1",
+    "eslint": "^9.39.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.5.0",
     "htmlhint": "^1.8.0",
     "vite": "^4.5.0"
   },
