--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^1.8.1",
     "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.5.0",
     "htmlhint": "^1.8.0",
     "vite": "^4.5.0"
