--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.5.0",
     "htmlhint": "^1.8.0",
+    "typescript": "^5.9.3",
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.8",
     "i18next": "^23.15.1",
